# Soundgrab

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json
.claude/: soundgrab_sop.md
.github/ISSUE_TEMPLATE/: bug_report.md
scripts/: make-portable.ps1
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  ytdlp.rs
src/components/: FolderPicker.tsx  FormatSelector.tsx  GrabButton.tsx  InfoModal.tsx  Logo.tsx  PlaylistTable.tsx  SettingsModal.tsx  TrackPreview.tsx  UrlInput.tsx
src/hooks/: useDownloadEvents.ts  useSettings.ts
src/styles/: tokens.css
