[package]
name = "soundgrab_scaffold"
version = "0.1.0"
description = "Soundgrab — download audio from YouTube and SoundCloud"
authors = ["muhanadbueno"]
edition = "2021"

[lib]
name = "soundgrab_scaffold_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
regex = "1"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
zip = "2"
